2003-10-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Convert the drawing functions to
	use gtk_paint_* more. Also made the cleared and uncleared cells
	use different GTK_STATEs to make them easier to distinguish (bug
	122969).

	* gnomine.c: Documented the undocumented command-line options.

2003-09-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Removed old i18n code that wasn't necessary
	and was crashing on Solaris.

2003-08-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Updated some comments, added a
	lymeric.

2003-08-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Complete rewrite to make the
	selection far more random.

2003-08-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Rewritten to be a 3-phase
	scheme. It uses Juhani Heino's code to first do a check for
	squares which are both near a mine *and* an uncleared square to
	try and give the player a bit of a hand when they are stuck with
	ambiguous hints. Unfortunately this highlights a failing with the
	previous algorithm where the location of the revealed tile is
	heavily influenced by the geometry of the revealed squares
	(e.g. the revealed square is highly likely to be at the bottom
	right of the revealed area.
	
2003-08-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c:
	* minefield.h:
	Take the random number generator out of _randomize and make it a
	property of the widget.
	
	* minefield.h:
	* gnomine.c: Added support for giving a hint. If possible a spot
	adjacent to a mine is cleared and a ten-second penalty is
	imposed. If not then a helpful (?) message is given. This was
	suggested by Juhani Heino <juhani.heino@1posti.net>.

2003-08-11  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c:
	* minefield.c: Added license header comments.

	* gnomine.c (new_game): Make the game window stay the